feat: update template at Eclipse jnosql static metamodel
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>