@@ -18,16 +18,11 @@ import com.github.mustachejava.DefaultMustacheFactory;
 import com.github.mustachejava.Mustache;
 import com.github.mustachejava.MustacheFactory;
 import jakarta.nosql.Entity;
-import org.eclipse.jnosql.mapping.DiscriminatorColumn;
-import org.eclipse.jnosql.mapping.DiscriminatorValue;
-import org.eclipse.jnosql.mapping.Embeddable;
-import org.eclipse.jnosql.mapping.Inheritance;
 import org.eclipse.jnosql.mapping.MappedSuperclass;
 
 import javax.annotation.processing.Filer;
 import javax.annotation.processing.ProcessingEnvironment;
 import javax.lang.model.element.Element;
-import javax.lang.model.element.Modifier;
 import javax.lang.model.element.TypeElement;
 import javax.lang.model.type.DeclaredType;
 import javax.tools.Diagnostic;
@@ -37,10 +32,8 @@ import java.io.Writer;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.StringJoiner;
 import java.util.function.Supplier;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 class ClassAnalyzer implements Supplier<String> {
@@ -87,11 +80,11 @@ class ClassAnalyzer implements Supplier<String> {
         Stream<? extends Element> elements = processingEnv.getElementUtils()
                 .getAllMembers(typeElement).stream();
 
-        final List<String> fields = Stream.concat(elements, superElements)
+        final List<FieldResult> fields = Stream.concat(elements, superElements)
                 .filter(EntityProcessor.IS_FIELD.and(EntityProcessor.HAS_ANNOTATION))
                 .map(f -> new FieldAnalyzer(f, processingEnv, typeElement))
                 .map(FieldAnalyzer::get)
-                .collect(Collectors.toList());
+                .toList();
 
         EntityModel metadata = getMetadata(typeElement, fields);
         createClass(entity, metadata);
@@ -107,14 +100,9 @@ class ClassAnalyzer implements Supplier<String> {
         }
     }
 
-    private EntityModel getMetadata(TypeElement element, List<String> fields) {
+    private EntityModel getMetadata(TypeElement element, List<FieldResult> fields) {
 
-        TypeElement superclass =
-                (TypeElement) ((DeclaredType) element.getSuperclass()).asElement();
         final Entity annotation = element.getAnnotation(Entity.class);
-        final boolean entityAnnotation = Objects.nonNull(annotation);
-        final boolean embedded = Objects.nonNull(element.getAnnotation(Embeddable.class));
-        final boolean hasInheritanceAnnotation = Objects.nonNull(element.getAnnotation(Inheritance.class));
         String packageName = ProcessorUtil.getPackageName(element);
         String sourceClassName = ProcessorUtil.getSimpleNameAsString(element);
 
@@ -123,37 +111,9 @@ class ClassAnalyzer implements Supplier<String> {
                 .map(Entity::value)
                 .filter(v -> !v.isBlank())
                 .orElse(sourceClassName);
-        String inheritanceParameter = null;
-        boolean notConcrete = element.getModifiers().contains(Modifier.ABSTRACT);
-        if (superclass.getAnnotation(Inheritance.class) != null) {
-            inheritanceParameter = getInheritanceParameter(element, superclass);
-            Entity superEntity = superclass.getAnnotation(Entity.class);
-            entityName = superEntity.value().isBlank() ? ProcessorUtil.getSimpleNameAsString(superclass) : annotation.value();
-        } else if (element.getAnnotation(Inheritance.class) != null) {
-            inheritanceParameter = getInheritanceParameter(element, element);
-        }
-        return new EntityModel(packageName, sourceClassName, entityName, fields, embedded, notConcrete,
-                inheritanceParameter, entityAnnotation, hasInheritanceAnnotation);
+        return new EntityModel(packageName, sourceClassName, entityName, fields);
     }
 
-    private String getInheritanceParameter(TypeElement element, TypeElement superclass) {
-        String discriminatorColumn = Optional
-                .ofNullable(superclass.getAnnotation(DiscriminatorColumn.class))
-                .map(DiscriminatorColumn::value)
-                .orElse(DiscriminatorColumn.DEFAULT_DISCRIMINATOR_COLUMN);
-
-        String discriminatorValue = Optional
-                .ofNullable(element.getAnnotation(DiscriminatorValue.class))
-                .map(DiscriminatorValue::value)
-                .orElse(element.getSimpleName().toString());
-
-        return new StringJoiner(",\n")
-                .add("\"" + discriminatorValue + "\"")
-                .add("\"" + discriminatorColumn + "\"")
-                .add(superclass.getQualifiedName().toString() + ".class")
-                .add(element.getQualifiedName().toString() + ".class")
-                .toString();
-    }
 
     private void error(IOException exception) {
         processingEnv.getMessager().printMessage(Diagnostic.Kind.ERROR, "failed to write extension file: "
